fixed overflowing margin

--- a/style.css
+++ b/style.css
@@ -687,6 +687,11 @@ video {
   margin-right: 2rem;
 }
 
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -753,6 +758,14 @@ video {
 
 .ml-2 {
   margin-left: 0.5rem;
+}
+
+.ml-6 {
+  margin-left: 1.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .flex {
